# HalconCPPExamples

./: .gitignore  README.md
Algorithm/HalconAlgorithm/OCR文字识别_神经网络训练/: Airline_Ticket_Delivery_Image_OCR_mlp.hdev  word.omc  word.trf  wordTrain.omc  wordTrain.trf  点状字母数字识别_mlp.hdev  点状字母数字识别_text_model.hdev  环形文字识别.hdev  罗超书字体识别_使用创建的mlp神经分类器.hdev  罗超书字体识别_创建mlp神经分类器.hdev
Algorithm/HalconAlgorithm/mlp颜色识别/: color_detect_mlp.hdev  colors.omc  colors_train_mlp.hdev
Algorithm/HalconAlgorithm/形态学处理/: bottom_hat底帽操作.hdev  closing闭运算.hdev  dilation膨胀.hdev  erosion腐蚀.hdev  opening开运算.hdev  top_hat顶帽操作.hdev  底帽提取暗图区域.hdev  灰度图膨胀腐蚀开闭操作.hdev  计算图片的树木个数.hdev
Algorithm/HalconAlgorithm/手眼标定/: 九点标定.tup  九点标定算子.hdev
Algorithm/HalconAlgorithm/板子焊点寻找/: algorithm.hdev
Algorithm/HalconAlgorithm/特征提取/: area_center.hdev  area_center_gray测试三维灰度图的体积中心.hdev  area_holes计算孔洞面积.hdev  gray_features灰度图特征参数显示.hdev  inner_circle最大内接圆.hdev  intensiy求取均值与偏差.hdev  min_max_gray灰度图中最大最小灰度值.hdev  select_gray灰度图特征筛选.hdev  select_shape特征选择_gen_image_proto清除指定区域.hdev  smallest_rectangle2.hdev
Algorithm/HalconAlgorithm/简单相机采图处理/: grabDealImg.hdev
Algorithm/HalconAlgorithm/车牌识别/: 车牌识别.hdev
Algorithm/HalconAlgorithm/边缘检测/: derivate_gauss图像边缘提取.hdev  edges_color_sub_pix彩图xld提取.hdev  edges_image新式边缘检测.hdev  edges_sub_pix亚像素边缘提取.hdev  fit_circle_contour_xld拟合圆形轮廓.hdev  laplace_of_gauss配合zero_crossing检测.hdev  laplace配合zero_crossing检测.hdev  lines_color彩图边缘线段提取.hdev  lines_gauss边缘线段提取.hdev  sobel_amp索贝尔求梯度.hdev  xld提取_分割_筛选_连接.hdev
Algorithm/HalconAlgorithm/透视形变图像校正/: matrix2DConvert.hdev
Algorithm/HalconAlgorithm/颜色与纹理/: decompose_sub_image分离通道后颜色相减求蓝色.hdev  texture_laws纹理滤波器.hdev
Algorithm/HalconAlgorithm/颜色识别/: yellowColor.hdev
CameraDemo/res_code/: camera_3mp.hdev  open_camera.hdev
Halcon3DDemo/: .gitignore  CMakeLists.txt  CMakeSettings.json  MaskPointCloud.ply  README.md
Halcon3DDemo/src/: MaskToPose.cpp  PCLDemo.cpp  PCLDemo（复件）.cpp
HandeyeDemo/: CMakeLists.txt  CMakeSettings.json  README.md
HandeyeDemo/circles_pattern/: caltab3x3_d15mm.descr  caltab3x3_d20mm.descr
HandeyeDemo/res_code/: Pattern_Generator.hdev  nine_point_calibration.hdev  test.hdev
HandeyeDemo/src/: GenCaltabDemo.cpp  disp_continue_message.cpp  disp_message.cpp  main.cpp  set_display_font.cpp
KawasakiDemo/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
KawasakiDemo/images/: .gitignore
KawasakiDemo/include/: beerBottleYolov8.h  boxesYolov8（复件）.h  cmd_line_utilBeerBottle.h  cmd_line_utilBoxes.h  cmd_line_utilBoxes（复件）.h  cmd_line_utilCorner.h  cmd_line_utilStrap.h  cornerYolov8.h  strapYolov8.h
KawasakiDemo/libs/tensorrt-cpp-api/: CMakeLists.txt
KawasakiDemo/models/: .gitignore
KawasakiDemo/models/plyModel/model/large/: model_large.ply  model_large_label.json  model_large_pickpoint.json
KawasakiDemo/models/plyModel/model/middle/: model_middle.ply  model_middle_label.json  model_middle_pickpoint.json
KawasakiDemo/models/plyModel/model/small/: model_small.ply  model_small_label.json  model_small_pickpoint.json
KawasakiDemo/scripts/: beerBottle_mask_demo.py  corner_demo.py  corner_mask_demo.py  mecheye_beerBottle_mask_demo.py  pytorch2onnx.py  strap_mask_demo.py
KawasakiDemo/src/: CaptureDepthMap.cpp  Mecheye_EyeToHand-14h29mins.txt  benchmark.cpp  cameraHSVDemo.cpp  cmd_line_util.h  kawasaki_mecheye_demo.cpp  kawasaki_transform.cpp  mecheyeHSVPCLDemo.cpp  mecheyePCLCornerDemo.cpp  mecheye_boxes_Point_Cloud_Registration.cpp  mecheye_boxes_Point_Cloud_Registration_TCP.cpp  mecheye_boxes_Point_Cloud_Registration_Video.cpp  mecheye_boxes_detection_EuclideanCluster.cpp  mecheye_boxes_detection_KdTree.cpp  mecheye_boxes_detection_compute3DCentroid.cpp  mecheye_object_detection.cpp  mecheye_object_detectionStrap.cpp  mecheye_object_detection_image.cpp  object_detection_image.cpp  test.cpp  yolov8.cpp
KawasakiDemo/src/beerbottle/: beerBottle_Point_Cloud_Seg.cpp  beerBottle_Point_Cloud_Seg_yolo.cpp  mecheye_beerBottle_Point_Cloud_Registration.cpp  mecheye_beerBottle_Point_Cloud_Seg_yolo.cpp
KawasakiDemo/src/boxes/: mecheye_boxes_Point_Cloud_Registration.cpp  object_detection_imageBoxes.cpp
KawasakiDemo/src/boxesStrap/: mecheye_boxes_Point_Cloud_Registration_TCP.cpp  mecheye_boxes_detection_EuclideanCluster.cpp  mecheye_boxes_detection_KdTree.cpp  mecheye_boxes_detection_compute3DCentroid.cpp  mecheye_object_detectionBoxes.cpp
KawasakiDemo/src/corner/: mecheyePCLCornerDemo.cpp  mecheye_object_detectionCorner.cpp  object_detection_imageCorner.cpp
KawasakiDemo/src/strap/: object_detection_imageStrap.cpp
KawasakiDemo/src/yoloCfg/: beerBottleYolov8.cpp  boxesYolov8.cpp  cornerYolov8.cpp  strapYolov8.cpp  strapYolov8.h
MechEyeDemo/: CMakeLists.txt
MechEyeDemo/Advanced/CaptureCloudFromDepth/: CMakeLists.txt  README.md  (+1 more)
MechEyeDemo/res_code/: configure_camera_ip_address.hdev  connect_to_camera_and_capture_images.hdev  obtain_depth_map.hdev  obtain_textured_point_cloud.hdev
MecheyeConCameraACaptureImages_demo/: CMakeLists.txt  README.md
MecheyeConCameraACaptureImages_demo/res_code/: connect_to_camera_and_capture_images.hdev
MecheyeConCameraACaptureImages_demo/src/: camera_parameters.cpp  dev_update_off.cpp  disp_message.cpp  main.cpp  set_display_font.cpp  visualize_object_model_3d.cpp
MecheyeHandeye/: CMakeLists.txt  CMakeSettings.json
MecheyeHandeye/CalibrationBoard/: BDB-5.STEP  BDB-6.STEP  BDB-7.STEP  CGB-020.STEP  CGB-035.STEP  CGB-050.STEP  OCB-005.STEP  OCB-010.STEP  OCB-020.STEP
MecheyeHandeye/config/: kawasaki_pose.json
MecheyeHandeye/res_code/: .gitignore  determine_calibration_poses.hdev  kawasaki_pose.json  new_point_pose.json  perform_hand_eye_calibration.hdev  test.md  usb_cam_hand_eye_calibration.hdev
MecheyeHandeye/src/: hand_to_eye_calibration.cpp
ShapeTempMatchExample/: .gitignore  CMakeLists.txt  README.md  ShapeTempMatchExample_demo.cpp
ShapeTempMatchExample/res_code/: ShapeTempMatchExample_demo.hdev
ShapeTempMatchExample/src/: ShapeTempMatchExample_demo.cpp  main.cpp
YOLOv8-TensorRT-CPP/: CMakeLists.txt
YOLOv8-TensorRT-CPP/src/: yolov8.h
(+889 files in other folders)
